# xkcd-386

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: cargo_toml.rs  config.rs  internal.rs  lib.rs  main.rs  mangle.rs  project.rs  source.rs
src/tests/: cargo_toml.rs  config.rs  mangle.rs  mod.rs  project.rs
