[package]
name = "xkcd-386"
version = "0.1.0"
authors = ["blallo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.82", features = ["derive"]  }
toml = { version = "0.5.8" }
cargo = { path = "./cargo" }
crates-io = { path = "./cargo/crates/crates-io" }
curl = { version = "0.4.23", features = ["http2"]  }
flate2 = { version = "1.0.3", default-features = false, features = ["zlib"]  }
tar = { version = "0.4.26", default-features = false  }
clap = "2.33.3"
rand = "0.8.3"
log = "0.4.14"
env_logger = "0.8.3"

[dev-dependencies]
tempfile = { version = "3.2.0" }
pretty_assertions = { version = "0.7.1" }
